fix: scrollbar能监听内容大小更新 &  去掉z-index

--- a/components/scrollbar/style/index.less
+++ b/components/scrollbar/style/index.less
@@ -12,6 +12,8 @@
 .@{scrollbar-prefix-cls} {
     position: relative;
     height: 100%;
+    width: 100%;
+    z-index: auto;
     overflow: hidden;
     .@{scrollbar-prefix-cls}-shadow-top {
         .shadow(@scrollbar-shadow-size, 'top')
@@ -26,10 +28,13 @@
         .shadow(@scrollbar-shadow-size, 'right')
     }
     &-container {
-        position: relative;
-        z-index: 0;
         height: 100%;
+        width: 100%;
         overflow: auto;
+    }
+    &-content {
+        box-sizing: border-box;
+        min-width: 100%;
     }
     &-hidden-native-bar {
         scrollbar-width: none;
@@ -43,7 +48,6 @@
     position: absolute;
     right: 2px;
     bottom: 2px;
-    z-index: 1;
     border-radius: 4px;
 
     &.is-vertical {
